<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/LinearLayoutStyle">

            <TextView
                android:id="@+id/textview_awayTeamName"
                style="@style/TeamNameStyle"
                android:text="@string/away_team_name"
                />

            <TextView
                android:id="@+id/textview_awayTeamScore"
                style="@style/TeamScoreStyle"
                android:text="@string/all_initialScore"
                />

            <Button
                android:id="@+id/button_awayTeamFieldGoal"
                style="@style/ButtonStyleTop"
                android:onClick="fieldGoal"
                android:text="@string/all_fieldGoal"
                />

            <Button
                android:id="@+id/button_awayTeamTouchdown"
                style="@style/ButtonStyleMiddle"
                android:onClick="touchdown"
                android:text="@string/all_touchdown"
                />

            <Button
                android:id="@+id/button_awayTeamExtraPointAttempt"
                style="@style/ButtonStyleMiddle"
                android:onClick="extraPointAttempt"
                android:text="@string/all_extraPointAttempt"
                />

            <Button
                android:id="@+id/button_awayTeamTwoPointConversion"
                style="@style/ButtonStyleBottom"
                android:onClick="twoPointConversion"
                android:text="@string/all_twoPointConversion" />


        </LinearLayout>

        <View
            style="@style/VerticalLine">
        </View>


        <LinearLayout
            style="@style/LinearLayoutStyle">

            <TextView
                android:id="@+id/textview_homeTeamName"
                style="@style/TeamNameStyle"
                android:text="@string/home_team_name" />

            <TextView
                android:id="@+id/textview_homeTeamScore"
                style="@style/TeamScoreStyle"
                android:text="@string/all_initialScore"/>


            <Button
                android:id="@+id/button_homeTeamFieldGoal"
                style="@style/ButtonStyleTop"
                android:onClick="fieldGoal"
                android:text="@string/all_fieldGoal"
                />

            <Button
                android:id="@+id/button_homeTeamTouchdown"
                style="@style/ButtonStyleMiddle"
                android:onClick="touchdown"
                android:text="@string/all_touchdown"/>

            <Button
                android:id="@+id/button_homeTeamExtraPointAttempt"
                style="@style/ButtonStyleMiddle"
                android:onClick="extraPointAttempt"
                android:text="@string/all_extraPointAttempt"/>

            <Button
                android:id="@+id/button_homeTeamTwoPointConversion"
                style="@style/ButtonStyleBottom"
                android:onClick="twoPointConversion"
                android:text="@string/all_twoPointConversion" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_resetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>
